--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "main": "index.js",
   "scripts": {
     "dev": "serverless offline start --reloadHandler"
+
   },
   "author": "Vinícius Silva",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@types/node": "^24.2.1",
+    "dotenv": "^17.2.1",
+    "drizzle-orm": "^0.44.4",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.3"
   }
 }
