Refactor database schema and models
- Removed old database migration files and schema definitions.
- Added new database migration files with updated schema definitions.
- Introduced TypeScript models for Category, ImageProduct, Product, StockItem, and User.
- Created an enum for ImageStatus to manage image processing states.
- Updated the database connection setup to use the new schema.
- Added Express as a dependency for future server-side handling.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "serverless offline start --reloadHandler"
-
   },
   "author": "Vinícius Silva",
   "license": "ISC",
@@ -14,6 +13,7 @@
     "@types/node": "^24.2.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "express": "^5.1.0",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
