--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.4",
