--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "description": "",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
-    "@types/node": "^24.2.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
-    "typescript": "^5.9.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
+    "@types/node": "^24.2.1",
     "drizzle-kit": "^0.31.4",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2"
   }
 }
