--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "serverless offline start --reloadHandler"
+    "dev": "serverless offline start --reloadHandler",
+    "start": "npx ts-node index.ts"
   },
   "author": "Vinícius Silva",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
-    "express": "^5.1.0",
+    "fastify": "^5.5.0",
     "zod": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
     "drizzle-kit": "^0.31.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   }
