--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "serverless offline start --reloadHandler",
-    "start": "npx ts-node index.ts"
+    "dev": "nodemon index.ts",
+    "dev serverless": "serverless offline start --reloadHandler",
+    "start": "node dist/index.js"
   },
   "author": "Vinícius Silva",
   "license": "ISC",
@@ -15,11 +16,14 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "fastify": "^5.5.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
     "drizzle-kit": "^0.31.4",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
