--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^24.2.1",
     "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
