--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.ts",
-    "dev serverless": "serverless offline start --reloadHandler",
-    "start": "node dist/index.js"
-  },
-  "author": "Vinícius Silva",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@neondatabase/serverless": "^1.0.1",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.1",
-    "drizzle-orm": "^0.44.4",
-    "fastify": "^5.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^4.1.3"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.2.1",
-    "drizzle-kit": "^0.31.4",
-    "nodemon": "^3.1.10",
-    "prettier": "^3.6.2",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
-  }
+    "name": "api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.ts",
+        "dev serverless": "serverless offline start --reloadHandler",
+        "start": "node dist/index.js",
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
+    },
+    "author": "Vinícius Silva",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "@neondatabase/serverless": "^1.0.1",
+        "bcryptjs": "^3.0.2",
+        "dotenv": "^17.2.1",
+        "drizzle-orm": "^0.44.4",
+        "fastify": "^5.5.0",
+        "jsonwebtoken": "^9.0.2",
+        "zod": "^4.1.3"
+    },
+    "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^24.2.1",
+        "drizzle-kit": "^0.31.4",
+        "nodemon": "^3.1.10",
+        "prettier": "^3.6.2",
+        "ts-node": "^10.9.2",
+        "tsx": "^4.20.3",
+        "typescript": "^5.9.2"
+    }
 }
