--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,9 @@
         "noUncheckedSideEffectImports": true,
         "moduleDetection": "force",
         "skipLibCheck": true
-    }
+    },
+    "include": [
+        "src/**/*.ts", // Inclui todos os arquivos .ts
+        "src/**/*.d.ts" // Inclui todos os arquivos de declaração
+    ]
 }
