--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.ts",
+        "dev": "nodemon --exec ts-node --files index.ts",
         "dev serverless": "serverless offline start --reloadHandler",
         "start": "node dist/index.js",
         "format": "prettier --write .",
