--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "drizzle-orm": "^0.44.4",
         "fastify": "^5.5.0",
         "jsonwebtoken": "^9.0.2",
+        "reflect-metadata": "^0.2.2",
+        "tsyringe": "^4.10.0",
         "zod": "^4.1.3"
     },
     "devDependencies": {
