--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc",
         "start": "node dist/index.js",
         "format": "prettier --write .",
-        "format:check": "prettier --check ."
+        "check": "prettier --check ."
     },
     "author": "Vinícius Silva",
     "license": "ISC",
@@ -26,7 +26,7 @@
     },
     "devDependencies": {
         "@types/jsonwebtoken": "^9.0.10",
-        "@types/node": "^24.2.1",
+        "@types/node": "^24.3.0",
         "drizzle-kit": "^0.31.4",
         "nodemon": "^3.1.10",
         "prettier": "^3.6.2",
